MMCPA-1361: Fixes the checkbox going out of place issue in Ar, if there is no translation.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/facet/_facet.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/facet/_facet.scss
@@ -65,5 +65,8 @@
   font-size: 0.875rem;
   margin: 0.75rem 0.5rem;
   text-transform: lowercase;
-  color: $black;
+
+  @include breakpoint($desktop) {
+    color: $black;
+  }
 }
